ops/k8s/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: fic-gig
  labels:
    name: web-ingress
spec:
  rules:
    - host: fictional-giggle.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fictional-giggle-web-service
                port: 
                  number: 3000
